# haste-compiler

./: .gitignore  .travis.yml  LICENSE  README  README.markdown  README.md  Setup.hs  TODOS  TestDriver.hs  build-release.hs  buildall.sh  buildlibs.sh  haste-compiler.aip  haste-compiler.cabal  haste.cabal  install.sh  jsplug.cabal  packagelibs.sh  runtests.sh  settings-ghc-7.10.windows  settings-ghc-7.8.windows  stack.yaml  uninstall.sh
CodeGen/Javascript/: Generate.hs  Monad.hs  PrintJS.hs
Plugin/: GenJS.hs
Tests/: Arr.hs  BitOps.hs  ComplexFromIntegral.hs  Concurrency.hs  DataToTag.hs  DoubleConversion.hs  DoubleDiv.hs  Elem.hs  EscapeSequences.hs  EscapedChars.hs  Exception.hs  FFI.hs  FFIFuns.hs  FFIList.hs  FFITuples.hs  GeneralTailcalls.hs  GenericToFromAny.hs  HasteReadInt.hs  HasteShowDouble.hs  IORef.hs  IOThunk.hs  Int64.hs  IntMap.hs  IntNaN.hs  IntOverflow.hs  IntWrap.hs  IntegerDivision.hs  IntegerGcdLcm.hs  IntegerToFromString.hs  Integers.hs  IntegersWithoutShow.hs  JSON.hs  JSString.hs  JSString_JSON.hs  MVar.hs  Map.hs  MarshalJSAny.hs  ModRem.hs  MutRecTailcalls.hs  NewSeed.hs  (+29 more)
debian/: changelog  control  haste-compiler.dirs  haste-compiler.install  haste-compiler.links  haste-compiler.manpages  postinst  rules
doc/: LICENSE.bn  building.md  haste-cat.1.md  hastec.1.md  js-externals.txt  porting-guide.md  readme-portable.txt
examples/calculator/: Makefile  calculator.hs  index.html
examples/canvas/: Makefile  canvas.hs  index.html
examples/canvas-simple/: Makefile  canvas-simple.hs  index.html
examples/chatbox/: Makefile  README.md  chatbox.hs  chatbox.html
examples/concurrency/: Makefile  counter.hs  index.html
examples/ffi/: Makefile  ffi.hs  index.html  wrapper.js
examples/haste-app/: Makefile  README.md  haste-app.hs  haste-app.html
examples/list/: Makefile  index.html  list.hs
examples/reactive/: Makefile  index.html  reactive.hs
examples/sendfile/: Makefile  sendfile.hs  sendfile.html
haste-lib/: LICENSE  haste-lib.cabal
include/: EventConfig.h  HaskellConstants.hs  HsBaseConfig.h  MachDeps.h  ghcautoconf.h  primop-info-710.hs  primop-stricts-710.hs
include/rts/: Threads.h
lib/: Canvas.js  Foreign.js  Handle.js  Int64.js  Integer.js  MVar.js  StableName.js  Weak.js  array.js  bn.js  cheap-unicode.js  debug.js  endian.js  eval-trampoline.js  eval.js  floatdecode.js  jsflow.js  jsstring.js  long.js  md5.js  pointers.js  rts.js  spt.js  stdlib.js  unicode-gen.sh  unicode.js
libraries/: quickcheck-2.6-amp.patch  rts.pkg
libraries/array/: HASTE-DIFFERENCES
libraries/base/: HASTE-DIFFERENCES  base.cabal
libraries/base-ghc-7.8/: base.cabal
libraries/fursuit/: README.md  fursuit.cabal
libraries/fursuit/src/FRP/: Fursuit.hs
libraries/fursuit/src/FRP/Fursuit/: Async.hs  Locking.hs  Pipe.hs  Signal.hs  Sink.hs
libraries/ghc-7.8/array/: array.cabal
libraries/ghc-7.8/array/Data/: Array.hs
libraries/ghc-7.8/array/Data/Array/: Base.hs  IO.hs  ST.hs  Unsafe.hs
libraries/ghc-7.8/array/Data/Array/MArray/: Safe.hs
libraries/ghc-7.8/array/include/: Typeable.h
libraries/ghc-prim/: ghc-prim.cabal  packageconfig
libraries/haste-lib/: LICENSE  haste-lib.cabal
libraries/haste-lib/src/: Haste.hs  XHaste.hs
libraries/haste-lib/src/Haste/: Ajax.hs  Any.hs  App.hs  Audio.hs  Binary.hs  Callback.hs  Compiler.hs  Concurrent.hs  Crypto.hs  DOM.hs  Events.hs  Foreign.hs  Hash.hs  JSON.hs  JSString.hs  JSType.hs  LocalStorage.hs  Object.hs  Parsing.hs  Performance.hs  Prim.hs  Random.hs  Reactive.hs  Serialize.hs  Timer.hs  WebSockets.hs
libraries/haste-lib/src/Haste/App/: Client.hs  Concurrent.hs  Events.hs  Monad.hs  Protocol.hs
libraries/haste-lib/src/Haste/Audio/: Events.hs
libraries/haste-lib/src/Haste/Binary/: Get.hs  Put.hs  Types.hs
libraries/haste-lib/src/Haste/Compiler/: Flags.hs
libraries/haste-lib/src/Haste/Concurrent/: Ajax.hs  Monad.hs
libraries/haste-lib/src/Haste/Crypto/: Prim.hs  Types.hs
libraries/haste-lib/src/Haste/DOM/: Core.hs  JSString.hs
libraries/haste-lib/src/Haste/Events/: BasicEvents.hs  Core.hs  KeyEvents.hs  MessageEvents.hs  MouseEvents.hs  TouchEvents.hs
libraries/haste-lib/src/Haste/Foreign/: Array.hs
libraries/haste-lib/src/Haste/Graphics/: AnimationFrame.hs  Canvas.hs
libraries/haste-lib/src/Haste/Reactive/: Ajax.hs  DOM.hs
libraries/haste-lib/src/XHaste/: Client.hs  Protocol.hs  Server.hs
libraries/haste-prim/: LICENSE  haste-prim.cabal
libraries/integer-gmp/: integer-gmp.cabal
libraries/time/: Makefile  README  configure.ac  time.cabal
libraries/time/lib/Data/: Time.hs
libraries/time/lib/Data/Time/: Calendar.hs  Clock.hs  Format.hs  LocalTime.hs
libraries/time/lib/Data/Time/Calendar/: Days.hs  Easter.hs  Gregorian.hs  Julian.hs  JulianYearDay.hs  MonthDay.hs  OrdinalDate.hs  Private.hs  WeekDate.hs
libraries/time/lib/Data/Time/Clock/: CTimeval.hs  POSIX.hs  Scale.hs  TAI.hs  UTC.hs  UTCDiff.hs
libraries/time/lib/Data/Time/Format/: Locale.hs  Parse.hs
libraries/time/lib/Data/Time/LocalTime/: LocalTime.hs  TimeOfDay.hs  TimeZone.hs
libraries/time/lib/include/: HsTimeConfig.h  HsTimeConfig.h.in
libraries/time/test/: Test.hs
libraries/time/test/Test/: AddDays.hs  AddDaysRef.hs  ClipDates.hs  ClipDatesRef.hs  ConvertBack.hs  CurrentTime.hs  LongWeekYears.hs  LongWeekYearsRef.hs  ShowDST.hs  TAI_UTC_DAT.hs  TestCalendars.hs  TestCalendarsRef.hs  TestEaster.hs  TestEasterRef.hs  TestFormat.hs  TestFormatStuff.c  TestFormatStuff.h  TestMonthDay.hs  TestMonthDayRef.hs  TestParseDAT.hs  TestParseDAT_Ref.hs  TestParseTime.hs  TestTime.hs  TestTimeRef.hs  TestTimeZone.hs  TestUtil.hs  Tests.hs  TimeZone.hs  UseCases.lhs
man/: haste-cat.1  hastec.1
patches/: closure-argument-removal.patch
popcache/: haste-populate-configure.cabal
src/: ArgSpecs.hs  Args.hs  BootVer.hs  Config.hs  EnvUtils.hs  Haste.hs  HasteReboot.hs  Main.hs  Version.hs  haste-boot.hs  haste-cabal.hs  haste-cat.hs  haste-copy-pkg.hs  haste-inst.hs  haste-install-his.hs  haste-pkg.hs  hastec.hs  jspcat.hs  jsplink.hs
src/CodeGen/: Javascript.hs
src/Control/: Shell.hs
(+255 files in other folders)
