Name:           haste-compiler
Version:        0.4.4.1
License:        BSD3
License-File:   LICENSE
Synopsis:       Haskell To ECMAScript compiler
Description:    This package provides a featureful compiler from Haskell to
                Javascript. It generates small, fast code, makes use of
                standard Haskell libraries, integrates with Cabal, supports
                most GHC extensions and works on Windows, Linux and OSX.
                Bug reports are highly appreciated.
Category:       Javascript, Compiler, Web
Cabal-Version:  >= 1.10
Build-Type:     Custom
Author:         Anton Ekblad <anton@ekblad.cc>
Maintainer:     anton@ekblad.cc
Homepage:       http://haste-lang.org/
Bug-reports:    http://github.com/valderman/haste-compiler/issues
Stability:      Experimental

Data-Dir:
    lib

Data-Files:
    rts.js
    stdlib.js
    MVar.js
    StableName.js
    Integer.js
    Int64.js
    md5.js
    array.js
    pointers.js
    unicode.js
    cheap-unicode.js
    debug.js
    Canvas.js
    Handle.js
    Weak.js

Flag portable
    Description:
        Install Haste into a self-contained directory. Package databases are
        still local to each user. Primarily useful for global installs.
    Default: False

Flag static
    Description:
        Build a statically linked binary. Only really useful together with
        portable.
    Default: False

Flag only-library
    Description:
        Only install the Haste server-side libraries; no binaries.
        This is useful if you installed pre-built binaries but still want
        to use Haste with vanilla GHC, for Haste.App for instance.
    Default: False

source-repository head
    type:       git
    location:   https://github.com/valderman/haste-compiler.git

Executable haste-boot
    if flag(only-library)
        buildable: False
    Main-Is: haste-boot.hs
    Other-Modules:
        Haste.Version
        Haste.Environment
        Haste.GHCPaths
    Hs-Source-Dirs: src
    if flag(portable)
        CPP-Options: -DPORTABLE
    Build-Depends:
        ghc,
        base < 5,
        bytestring,
        tar,
        bzlib,
        transformers,
        network,
        network-uri,
        HTTP,
        shellmate >= 0.1.5,
        ghc-paths,
        ghc,
        directory
    Default-Language: Haskell98

Executable hastec
    if flag(only-library)
        buildable: False
    Hs-Source-Dirs: src
    GHC-Options: -Wall -O2
    if flag(portable)
        CPP-Options: -DPORTABLE
    if flag(static)
        if os(windows)
          GHC-Options: -static -optl-static
        else
          if os(linux)
            GHC-Options: -static -optl-static -optl-pthread
    Build-Depends:
        base < 5,
        ghc-prim,
        ghc >= 7.4,
        mtl,
        binary,
        containers,
        data-default,
        bytestring >= 0.9.2.1,
        utf8-string,
        blaze-builder,
        array,
        ghc-paths,
        random,
        system-fileio,
        shellmate >= 0.1.5,
        either,
        directory
    Main-Is:
        Main.hs
    Other-Modules:
        Haste
        Haste.Args
        Haste.Opts
        Haste.Version
        Haste.Environment
        Haste.GHCPaths
        Haste.Config
        Haste.Monad
        Haste.PrimOps
        Haste.Module
        Haste.Linker
        Haste.Builtins
        Haste.Errors
        Haste.CodeGen
        Data.JSTarget
        Data.JSTarget.AST
        Data.JSTarget.Binary
        Data.JSTarget.Constructors
        Data.JSTarget.Op
        Data.JSTarget.Optimize
        Data.JSTarget.PP
        Data.JSTarget.Print
        Data.JSTarget.Traversal
    default-language: Haskell98

Executable haste-inst
    if flag(only-library)
        buildable: False
    Main-Is: haste-inst.hs
    Hs-Source-Dirs: src
    if flag(portable)
        CPP-Options: -DPORTABLE
    if flag(static)
        if os(windows)
          GHC-Options: -static -optl-static
        else
          if os(linux)
            GHC-Options: -static -optl-static -optl-pthread
    Build-Depends:
        base < 5,
        shellmate,
        ghc-paths,
        ghc,
        directory
    default-language: Haskell98

Executable haste-pkg
    if flag(only-library)
        buildable: False
    Main-Is: haste-pkg.hs
    Hs-Source-Dirs: src
    if flag(portable)
        CPP-Options: -DPORTABLE
    if flag(static)
        if os(windows)
          GHC-Options: -static -optl-static
        else
          if os(linux)
            GHC-Options: -static -optl-static -optl-pthread
    Build-Depends:
        base < 5,
        shellmate,
        ghc-paths,
        ghc,
        process,
        directory
    default-language: Haskell98

Executable haste-install-his
    if flag(only-library)
        buildable: False
    Main-Is: haste-install-his.hs
    Hs-Source-Dirs: src
    if flag(portable)
        CPP-Options: -DPORTABLE
    Build-Depends:
        base < 5,
        shellmate,
        ghc-paths,
        ghc,
        directory
    default-language: Haskell98

Executable haste-copy-pkg
    if flag(only-library)
        buildable: False
    Main-Is: haste-copy-pkg.hs
    Other-Modules:
        Haste.Environment
        Haste.GHCPaths
    Hs-Source-Dirs: src
    if flag(portable)
        CPP-Options: -DPORTABLE
    Build-Depends:
        base < 5,
        shellmate >= 0.1.5,
        ghc-paths,
        ghc,
        directory
    default-language: Haskell98

Executable haste-cat
    if flag(only-library)
        buildable: False
    Main-Is: haste-cat.hs
    Other-Modules:
        Haste.Environment
        Haste.GHCPaths
    Hs-Source-Dirs: src
    if flag(portable)
        CPP-Options: -DPORTABLE
    Build-Depends:
        base < 5,
        shellmate >= 0.1.5,
        ghc-paths,
        ghc,
        binary,
        containers,
        blaze-builder,
        bytestring,
        array,
        random,
        data-default,
        directory
    default-language: Haskell98

Library
    Hs-Source-Dirs: libraries/haste-lib/src, src
    GHC-Options: -Wall -O2
    Exposed-Modules:
        Haste
        Haste.App
        Haste.App.Concurrent
        Haste.Binary
        Haste.Compiler
        Haste.JSON
        Haste.Ajax
        Haste.DOM
        Haste.Prim
        Haste.Concurrent
        Haste.Graphics.Canvas
        Haste.Foreign
        Haste.Serialize
        Haste.Parsing
        Haste.WebSockets
        Haste.LocalStorage
    Other-Modules:
        Haste.JSType
        Haste.Callback
        Haste.Compiler.Flags
        Haste.Version
        Haste.Environment
        Haste.GHCPaths
        Paths_haste_compiler
        Haste.Hash
        Haste.Random
        Haste.Concurrent.Monad
        Haste.Concurrent.Ajax
        Haste.App.Client
        Haste.App.Events
        Haste.App.Monad
        Haste.App.Protocol
        Haste.Binary.Get
        Haste.Binary.Put
        Haste.Binary.Types
    Build-Depends:
        transformers,
        monads-tf,
        containers,
        base < 5,
        random,
        binary,
        data-binary-ieee754,
        bytestring >= 0.9.2.1,
        utf8-string,
        -- For Haste.Compiler
        shellmate >= 0.1.5,
        data-default,
        directory,
        filepath,
        process,
        ghc-paths,
        ghc,
        directory,
        websockets >= 0.9.1.0,
        network >= 2.6,
        network-uri >= 2.6
    Default-Language: Haskell98
