Name:           haste-compiler
Version:        0.1
License:        GPL-3
License-File:   LICENSE
Synopsis:       HASkell To Ecmascript compiler
Description:    HASkell To Ecmascript compiler
Cabal-Version:  >= 1.10
Build-Type:     Simple
Author:         Anton Ekblad <anton@ekblad.cc>
Copyright:      Anton Ekblad <anton@ekblad.cc>
Maintainer:     Anton Ekblad <anton@ekblad.cc>
Homepage:       http://ekblad.cc
Bug-reports:    http://ekblad.cc
Stability:      Experimental

Data-Dir:
    lib

Data-Files:
    rts.js
    stdlib.js
    eval.js
    eval-trampoline.js
    MVar.js

Library
    Hs-Source-Dirs: src
    GHC-Options: -Wall -O2
    Exposed-Modules:
        Haste
        Haste.JSON
        Haste.Ajax
        Haste.Reactive
        Haste.DOM
        Haste.Prim
    Other-Modules:
        Haste.Readable
        Haste.Showable
        Haste.Callback
        Haste.Random
        Haste.Reactive.DOM
        Haste.Reactive.Ajax
    Build-Depends:
        base,
        ghc-prim,
        fursuit,
        containers
    Default-Language: Haskell98

Executable haste-boot
    Main-Is: haste-boot.hs
    Other-Modules:
        BootVer
    Hs-Source-Dirs: src
    GHC-Options: -Wall -O2
    Build-Depends:
        base,
        directory,
        process,
        bytestring,
        tar,
        bzlib,
        zip-archive,
        curl,
        download-curl
    Default-Language: Haskell98

Executable hastec
    Hs-Source-Dirs: src
    GHC-Options: -Wall -O2
    Build-Depends:
        base,
        ghc-prim,
        ghc >= 7.2,
        mtl,
        cereal,
        containers <= 0.4.2.1,
        bytestring,
        filepath,
        directory,
        array,
        ghc-paths,
        process
    Main-Is:
        Main.hs
    Other-Modules:
        Args
        ArgSpecs
        BootVer
        CodeGen.Javascript
        CodeGen.Javascript.Config
        CodeGen.Javascript.AST
        CodeGen.Javascript.Monad
        CodeGen.Javascript.StgGen
        CodeGen.Javascript.Optimize
        CodeGen.Javascript.PrintJS
        CodeGen.Javascript.PrettyM
        CodeGen.Javascript.PrimOps
        CodeGen.Javascript.Module
        CodeGen.Javascript.Linker
        CodeGen.Javascript.Builtins
        CodeGen.Javascript.Errors
    default-language: Haskell98

Executable hastecat
    Main-Is: jspcat.hs
    Hs-Source-Dirs: src
    Build-Depends:
        base,
        cereal,
        ghc-prim,
        ghc,
        containers <= 0.4.2.1,
        filepath,
        directory,
        bytestring,
        mtl,
        array
    default-language: Haskell98
