Name:           haste-compiler
Version:        0.1
License:        BSD3
License-File:   LICENSE
Synopsis:       HASkell To Ecmascript compiler
Description:    HASkell To Ecmascript compiler
Cabal-Version:  >= 1.10
Build-Type:     Simple
Author:         Anton Ekblad <anton@ekblad.cc>
Copyright:      Anton Ekblad <anton@ekblad.cc>
Maintainer:     Anton Ekblad <anton@ekblad.cc>
Homepage:       http://github.com/valderman/haste-compiler
Bug-reports:    http://github.com/valderman/haste-compiler/issues
Stability:      Experimental

Data-Dir:
    lib

Data-Files:
    rts.js
    stdlib.js
    MVar.js
    StableName.js
    Integer.js
    md5.js
    array.js
    pointers.js

Executable haste-boot
    Main-Is: haste-boot.hs
    Other-Modules:
        Version
    Hs-Source-Dirs: src
    GHC-Options: -Wall -O2
    Build-Depends:
        ghc,
        base,
        directory,
        process,
        bytestring,
        tar,
        bzlib,
        zip-archive,
        curl,
        download-curl,
        filepath
    Default-Language: Haskell98

Executable hastec
    Hs-Source-Dirs: src
    GHC-Options: -Wall -O2
    Build-Depends:
        base,
        ghc-prim,
        ghc >= 7.2,
        mtl,
        binary,
        containers,
        data-default,
        bytestring,
        filepath,
        directory,
        array,
        ghc-paths,
        process,
        unix,
        random,
        system-fileio,
        nano-md5
    Main-Is:
        Main.hs
    Other-Modules:
        Args
        ArgSpecs
        Version
        Haste
        Haste.Config
        Haste.Monad
        Haste.PrimOps
        Haste.Module
        Haste.Linker
        Haste.Builtins
        Haste.Errors
        Data.JSTarget
        Data.JSTarget.AST
        Data.JSTarget.Binary
        Data.JSTarget.Constructors
        Data.JSTarget.Op
        Data.JSTarget.Optimize
        Data.JSTarget.PP
        Data.JSTarget.Print
        Data.JSTarget.Traversal
    default-language: Haskell98

Executable haste-inst
    Main-Is: haste-inst.hs
    Hs-Source-Dirs: src
    Build-Depends:
        base,
        filepath,
        process,
        directory
    default-language: Haskell98

Executable haste-pkg
    Main-Is: haste-pkg.hs
    Hs-Source-Dirs: src
    Build-Depends:
        base,
        process,
        filepath,
        directory
    default-language: Haskell98

Executable haste-install-his
    Main-Is: haste-install-his.hs
    Hs-Source-Dirs: src
    Build-Depends:
        base,
        filepath,
        directory,
        process
    default-language: Haskell98

Executable haste-copy-pkg
    Main-Is: haste-copy-pkg.hs
    Hs-Source-Dirs: src
    Build-Depends:
        base,
        filepath,
        directory,
        process
    default-language: Haskell98
