Name:           jsplug
Version:        0.1
License:        GPL-3
License-File:   LICENSE
Synopsis:       Generate Javascript from Haskell by way of a GHC plugin
Description:    Generate Javascript from Haskell by way of a GHC plugin
Cabal-Version:  >= 1.10
Build-Type:     Simple
Author:         Anton Ekblad <anton@ekblad.cc>
Copyright:      Anton Ekblad <anton@ekblad.cc>
Maintainer:     Anton Ekblad <anton@ekblad.cc>
Homepage:       http://ekblad.cc
Bug-reports:    http://ekblad.cc
Stability:      Experimental

Library
    Hs-Source-Dirs: src
    GHC-Options: -Wall
    Build-Depends:
        base,
        ghc-prim,
        ghc >= 7.2,
        mtl,
        cereal,
        cereal-derive,
        containers,
        bytestring,
        filepath
    Exposed-Modules:
        Plugin.GenJS
        CodeGen.Javascript
    Other-Modules:
        CodeGen.Javascript.AST
        CodeGen.Javascript.Monad
        CodeGen.Javascript.Generate
        CodeGen.Javascript.PrintJS
        CodeGen.Javascript.PrettyM
        CodeGen.Javascript.PrimOps
        CodeGen.Javascript.Module
    default-language: Haskell98

Executable jspcat
    Main-Is: jspcat.hs
    Hs-Source-Dirs: src
    Build-Depends:
        base,
        cereal,
        cereal-derive,
        ghc-prim,
        ghc,
        containers,
        filepath,
        bytestring,
        mtl
    default-language: Haskell98
