Name:           haste-lib
Version:        0.5.4.1
License:        BSD3
License-File:   LICENSE
Synopsis:       Base libraries for haste-compiler.
Description:    Base libraries for haste-compiler. Only useful for web development, doesn't link with vanilla GHC.
Cabal-Version:  >= 1.10
Build-Type:     Simple
Author:         Anton Ekblad <anton@ekblad.cc>
Maintainer:     anton@ekblad.cc
Homepage:       http://github.com/valderman/haste-compiler
Bug-reports:    http://github.com/valderman/haste-compiler/issues
Stability:      Experimental

Library
    Hs-Source-Dirs: src
    GHC-Options: -Wall -O2
    Exposed-Modules:
        Haste
        Haste.Ajax
        Haste.App
        Haste.App.Concurrent
        Haste.Audio
        Haste.Binary
        Haste.Compiler
        Haste.Concurrent
        Haste.DOM
        Haste.DOM.JSString
        Haste.Events
        Haste.Foreign
        Haste.Graphics.AnimationFrame
        Haste.Graphics.Canvas
        Haste.JSON
        Haste.JSString
        Haste.LocalStorage
        Haste.Object
        Haste.Parsing
        Haste.Performance
        Haste.Serialize
        Haste.WebSockets
    Other-Modules:
        Haste.App.Client
        Haste.App.Monad
        Haste.App.Protocol
        Haste.Audio.Events
        Haste.Binary.Get
        Haste.Binary.Put
        Haste.Binary.Types
        Haste.Compiler.Flags
        Haste.Concurrent.Monad
        Haste.Concurrent.Ajax
        Haste.DOM.Core
        Haste.Events.BasicEvents
        Haste.Events.Core
        Haste.Events.KeyEvents
        Haste.Events.MouseEvents
        Haste.Events.TouchEvents
        Haste.Hash
        Haste.Random
        Haste.Timer
    Build-Depends:
        integer-gmp,
        transformers,
        monads-tf,
        ghc-prim,
        containers > 0.5.6 && < 0.5.7,
        bytestring < 0.11,
        haste-prim == 0.5.4.1,
        time == 1.5.0.1
    if impl(haste)
        if impl(ghc >= 7.10)
            Build-Depends:
              array == 0.5.1.0,
              hashable >= 1.2 && < 1.3,
              base >= 4.8 && < 4.9
        else
            Build-Depends:
              array == 0.4.0.1,
              hashable >= 1.2 && < 1.3,
              base == 4.6.0.1
    else
        Build-Depends:
            base,
            array,
            random,
            websockets >= 0.8
    Default-Language: Haskell98
