Name:           haste-lib
Version:        0.6.0.0
License:        BSD3
License-File:   LICENSE
Synopsis:       Base libraries for haste-compiler.
Description:    Base libraries for haste-compiler. Only useful for web development, doesn't link with vanilla GHC.
Cabal-Version:  >= 1.10
Build-Type:     Simple
Author:         Anton Ekblad <anton@ekblad.cc>
Maintainer:     anton@ekblad.cc
Homepage:       http://github.com/valderman/haste-compiler
Bug-reports:    http://github.com/valderman/haste-compiler/issues
Stability:      Experimental

Library
    Hs-Source-Dirs: src
    GHC-Options: -Wall -O2
    Exposed-Modules:
        Haste
        Haste.Ajax
        Haste.Audio
        Haste.Binary
        Haste.Concurrent
        Haste.DOM
        Haste.DOM.JSString
        Haste.Events
        Haste.Foreign
        Haste.Graphics.AnimationFrame
        Haste.Graphics.Canvas
        Haste.JSON
        Haste.JSString
        Haste.LocalStorage
        Haste.Parsing
        Haste.Performance
        Haste.Serialize
        Haste.WebSockets
    Other-Modules:
        Haste.Audio.Events
        Haste.Binary.Get
        Haste.Binary.Put
        Haste.Binary.Types
        Haste.Concurrent.Monad
        Haste.Concurrent.Ajax
        Haste.DOM.Core
        Haste.Events.BasicEvents
        Haste.Events.Core
        Haste.Events.KeyEvents
        Haste.Events.MouseEvents
        Haste.Events.TouchEvents
        Haste.Hash
        Haste.Timer
    Build-Depends:
        base >= 4.8 && < 5,
        integer-gmp,
        transformers,
        monads-tf,
        ghc-prim,
        containers > 0.5.6 && < 0.5.7,
        bytestring < 0.11,
        haste-prim == 0.6.0.0,
        time == 1.5.0.1
    if impl(haste)
        if impl(ghc >= 7.10)
            Build-Depends:
              array == 0.5.1.0,
              hashable >= 1.2 && < 1.3
        else
            Build-Depends:
              array == 0.4.0.1,
              hashable >= 1.2 && < 1.3,
              base == 4.6.0.1
    else
        Build-Depends:
          array,
          random,
          binary              >= 0.7 && < 0.8,
          data-binary-ieee754 >= 0.4 && < 0.5,
          utf8-string         >= 1   && < 2
    Default-Language: Haskell98
